@@ -1,3 +1,11 @@
+alambert    2005/11/05 06:46:13 UTC	(20051105-3473)
+  Log:
+  authcookie_destroy(): remember to node_free()
+
+  Changes:	Modified:
+  +1 -0		trunk/src/authcookie.c (File Modified) 
+
+
 w00t        2005/11/05 06:40:44 UTC	(20051105-3471)
   Log:
   ms_ignore_ignore -> ms_ignore_clear to be in-line with the others. Minute change.
